# libftpp

./: .clangd  .gitignore  CMakeLists.txt  build.sh  env.example  ftppConfig.cmake  libftpp.hh
arena_allocator/: arena_allocator.hh
chronometer/: chronometer.cc  chronometer.hh
data_structures/: data_structures.hh
data_structures/data_buffer/: data_buffer.cc  data_buffer.hh  data_buffer.tpp
data_structures/pool/: pool.hh  pool.tpp
design_patterns/: design_patterns.hh
design_patterns/arena_allocator/: arena_allocator.cc  arena_allocator.hh  arena_allocator.tpp
design_patterns/memento/: memento.cc  memento.hh  unique_memento.hh  unique_memento.tpp
design_patterns/non_copyable/: non_copyable.hh
design_patterns/observer/: observer.hh
design_patterns/responsability_chain/: responsability_chain.cc  responsability_chain.hh
design_patterns/singleton/: singleton.hh
design_patterns/state_machine/: state_machine.hh
include/: data_buffer.hh  data_structures.hpp  pool.hh  pool.tpp
iostream/: thread_safe_iostream.cc  thread_safe_iostream.hh
mathematics/: mathematics.hh
mathematics/ivector2/: ivector2.hh
mathematics/ivector3/: ivector3.hh
mathematics/perlin_noise_2D/: perlin_noise_2D.cc  perlin_noise_2D.hh
mathematics/random_2D_coordinate_generator/: random_2D_coordinate_generator.cc  random_2D_coordinate_generator.hh
network/: network.hh
network/client/: client.cc  client.hh  clientGUI.cc
network/logger/: logger.cc  logger.hh
network/matt_daemon/: matt_daemon.cc
network/message/: message.cc  message.hh
network/prompt/: prompt.cc  prompt.hh
network/server/: server.cc  server.hh
src/: CMakeLists.txt
tests/: CMakeLists.txt  IoStat.cc  main_arena_allocator.cc  main_client.cpp  main_data_buffer.cpp  main_memento.cpp  main_non_copyable.cc  main_observer.cpp  main_perlin_2D.cpp  main_persistant_worker.cpp  main_persistent_worker.cpp  main_pool.cpp  main_random_2D_coordinate_generator.cpp  main_rcu.cc  main_responsability_chain.cc  main_server.cpp  main_singleton.cpp  main_state_machine.cpp  main_thread.cpp  main_thread_safe_iostream.cpp  main_thread_safe_queue.cpp  main_timer.cc  main_unique_memento.cc  main_vector_2.cpp  main_vector_3.cpp  main_worker_pool.cpp  testMain.cc  tester.hh
threading/: threading.hh  threading.hpp
threading/persistent_worker/: persistent_worker.cc  persistent_worker.hh
threading/rcu/: rcu.hh  rcu.tpp
threading/thread/: thread.cc  thread.hh
threading/thread_safe_queue/: thread_safe_queue.hh
threading/worker_pool/: worker_pool.cc  worker_pool.hh
time/: time.hh
time/chronometer/: chronometer.hh
time/timer/: timer.cc  timer.hh
utils/: color.hh
